--- a/src/components/sections/StatsSection.css
+++ b/src/components/sections/StatsSection.css
@@ -1,8 +1,6 @@
-
-
 .stats-section {
   padding: 2rem 0;
-  background-color:#f8f8fa;
+  background-color: #f8f8fa;
 }
 
 .stats-container {
@@ -10,8 +8,6 @@
   margin: 0 auto;
   padding: 0 1rem;
 }
-
-
 
 .stats-grid {
   display: grid;
@@ -31,12 +27,11 @@
   transform: scale(1.05);
 }
 
-
 .home-stat-number {
   font-size: 48px;
   font-weight: 600;
   font-family: var(--font-gilroy);
-  color: #49484D;
+  color: #49484d;
   line-height: 100%;
   flex-shrink: 0;
 }
@@ -48,9 +43,8 @@
   font-size: 16px;
   line-height: 100%;
   font-weight: 400;
-  color: #49484D;
+  color: #49484d;
 }
-
 
 .stat-sublabel {
   font-size: 0.875rem;
@@ -61,23 +55,23 @@
   .stats-section {
     padding: 0rem 0;
   }
-  
+
   .stats-container {
     padding: 0 0rem;
   }
-  
+
   .stats-grid {
     display: flex;
     flex-direction: column;
     gap: 0rem;
     align-items: center;
   }
-  
+
   .stat-item {
     width: 100%;
     padding: 1.5rem;
   }
-  
+
   /* Add bottom border to first and second stat items only */
   .stat-item:nth-child(1),
   .stat-item:nth-child(2) {
@@ -97,6 +91,6 @@
     font-size: 16px;
     line-height: 100%;
     font-weight: 400;
-    color: #49484D;
+    color: #49484d;
   }
 }
